--- a/config.ini
+++ b/config.ini
@@ -15,4 +15,4 @@ type_five = 1
 ;目标目录
 target = http://www.gpshk.cc/lsj
 ;cookie账号
-cookie_file = mylibs/thor_cookie.txt
+cookie_file = mylibs/bieber_cookie.txt
